# gemini_demo

./: .gitignore  PROMPTS.md  README.md  pyproject.toml
configs/: example_config.yaml
docs/scenarios/: 01_finding_bugs.md  02_iterative_fixing.md  03_documentation.md  04_large_task_decomposition.md  04_parallel_development.md  05_agent_limitations.md
scripts/: setup.sh
src/analytics_toolkit/: __init__.py
src/analytics_toolkit/api/: __init__.py  endpoints.py  middleware.py  serializers.py  validators.py
src/analytics_toolkit/data/: __init__.py  processor.py  transformers.py
src/analytics_toolkit/models/: __init__.py  statistics.py
src/analytics_toolkit/utils/: __init__.py  domain_specific.py
tests/: test_statistics.py
